cluster/manifests/elastic-cloud-kubernetes/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: elastic-operator
spec:
  selector:
    matchLabels:
      control-plane: elastic-operator
  mtls:
    mode: STRICT
